--- a/app/templates/app/post/dashboard.html
+++ b/app/templates/app/post/dashboard.html
@@ -7,27 +7,27 @@
 <div class="row d-flex justify-content-center align-items-center h-100">
   <div class="col-lg-8 col-xl-8">
 <div class="table-responsive small">
-    <table class="table table-striped table-sm">
+    <table class="table table-striped table-sm text-center">
       <thead>
         <tr>
-          <th scope="col">Order number</th>
+          <th scope="col" class="col-sm-1">Order number</th>
           <th scope="col">Caption</th>
           <th scope="col">Name</th>
           <th scope="col">Applied time</th>
-          <th scope="col">Status</th>
+          <th scope="col" class="col-sm-1">Status</th>
           <th scope="col"></th>
-          <th scope="col"> Hightlight </th>
+          <th scope="col" class="col-sm-1"> Hightlight </th>
          
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>1</td>
+          <td >1</td>
           <td>Caption 1</td>
           <td>Mike</td>
           <td>Date 1</td>
-          <td>PENDING</td>
-          <td><button type="submit" class="btn btn-secondary btn-sm col-sm-25">View CV</button></td>
+          <td class= "table-secondary fw-bold col-sm-1" >PENDING </td>
+          <td><button type="submit" class="btn btn-primary btn-sm col-sm-25">View CV</button></td>
           <td><i class="bi bi-star bi-lg"></i></td>
           
         </tr>
@@ -36,9 +36,9 @@
           <td>Caption 2</td>
           <td>Hana</td>
           <td>Date 2</td>
-          <td>DENIED</td>
-          <td><button type="submit" class="btn btn-secondary btn-sm col-sm-25">View CV</button></td>
-          <td><i class="bi bi-star bi-lg"></i></td>
+          <td class= "table-danger text-danger fw-bold">DENIED</td>
+          <td><button type="submit" class="btn btn-primary btn-sm col-sm-25">View CV</button></td>
+          <td class = "text-warning"><i class="bi bi-star-fill bi-lg"></i></td>
           
         </tr>
         
@@ -49,6 +49,57 @@
 </div>
         
 {% endblock main-content %}
+
+
+
+<!--
+{% block main-content %}
+<div class="row d-flex justify-content-center align-items-center h-100">
+  <div class="col-lg-8 col-xl-8">
+    <div class="table-responsive small">
+      <table class="table table-striped table-sm text-center">
+        <thead>
+          <tr>
+            <th scope="col" class="col-sm-1">Order number</th>
+            <th scope="col">Caption</th>
+            <th scope="col">Name</th>
+            <th scope="col">Applied time</th>
+            <th scope="col" class="col-sm-1">Status</th>
+            <th scope="col"></th>
+            <th scope="col" class="col-sm-1"> Hightlight </th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for item in dashboard_items %}
+          <tr>
+            <td>{{ item.order_number }}</td>
+            <td>{{ item.caption }}</td>
+            <td>{{ item.name }}</td>
+            <td>{{ item.applied_time }}</td>
+            <td class="table-secondary fw-bold col-sm-1">{{ item.status }}</td>
+            <td><button type="submit" class="btn btn-primary btn-sm col-sm-25">View CV</button></td>
+            <td>
+              {% if item.highlight %}
+              <i class="bi bi-star-fill bi-lg text-warning"></i>
+              {% else %}
+              <i class="bi bi-star bi-lg"></i>
+              {% endif %}
+            </td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+{% endblock main-content %}
+
+
+-->
+
+
+
+
 
 <!--
  <td><i class="bi bi-check-circle"></i></td>
