--- a/app/templates/app/post/dashboard.html
+++ b/app/templates/app/post/dashboard.html
@@ -5,7 +5,7 @@
 
 {% block main-content %}
 <div class="row d-flex justify-content-center align-items-center h-100">
-  <div class="col-lg-8 col-xl-8">
+  <div class="col-lg-7 col-xl-7">
 <div class="table-responsive small">
     <table class="table table-striped table-sm text-center">
       <thead>
@@ -15,7 +15,7 @@
           <th scope="col">Name</th>
           <th scope="col">Applied time</th>
           <th scope="col" class="col-sm-1">Status</th>
-          <th scope="col"></th>
+          <th scope="col" class="col-sm-1"></th>
           <th scope="col" class="col-sm-1"> Hightlight </th>
          
         </tr>
@@ -41,6 +41,17 @@
           <td class = "text-warning"><i class="bi bi-star-fill bi-lg"></i></td>
           
         </tr>
+
+        <tr>
+          <td>3</td>
+          <td>Caption 3</td>
+          <td>Anna</td>
+          <td>Date 3</td>
+          <td class= "table-success text-success fw-bold">ACCEPTED</td>
+          <td><button type="submit" class="btn btn-primary btn-sm col-sm-25">View CV</button></td>
+          <td><i class="bi bi-star bi-lg"></i></td>
+          
+        </tr>
         
       </tbody>
     </table>
@@ -51,11 +62,11 @@
 {% endblock main-content %}
 
 
+<!-- A prototype for looping the code --> 
 
 <!--
-{% block main-content %}
 <div class="row d-flex justify-content-center align-items-center h-100">
-  <div class="col-lg-8 col-xl-8">
+  <div class="col-lg-7 col-xl-7">
     <div class="table-responsive small">
       <table class="table table-striped table-sm text-center">
         <thead>
@@ -65,42 +76,43 @@
             <th scope="col">Name</th>
             <th scope="col">Applied time</th>
             <th scope="col" class="col-sm-1">Status</th>
-            <th scope="col"></th>
-            <th scope="col" class="col-sm-1"> Hightlight </th>
+            <th scope="col" class="col-sm-1"></th>
+            <th scope="col" class="col-sm-1">Highlight</th>
           </tr>
         </thead>
         <tbody>
-          {% for item in dashboard_items %}
-          <tr>
-            <td>{{ item.order_number }}</td>
-            <td>{{ item.caption }}</td>
-            <td>{{ item.name }}</td>
-            <td>{{ item.applied_time }}</td>
-            <td class="table-secondary fw-bold col-sm-1">{{ item.status }}</td>
-            <td><button type="submit" class="btn btn-primary btn-sm col-sm-25">View CV</button></td>
-            <td>
-              {% if item.highlight %}
-              <i class="bi bi-star-fill bi-lg text-warning"></i>
-              {% else %}
-              <i class="bi bi-star bi-lg"></i>
+          {% for item in data %}
+            <tr>
+              <td>{{ item.order_number }}</td>
+              <td>{{ item.caption }}</td>
+              <td>{{ item.name }}</td>
+              <td>{{ item.applied_time }}</td>
+              {% if item.status == 'PENDING' %}
+                <td class="table-secondary fw-bold col-sm-1">PENDING</td>
+              {% elif item.status == 'DENIED' %}
+                <td class="table-danger text-danger fw-bold">DENIED</td>
+              {% elif item.status == 'ACCEPTED' %}
+                <td class="table-success text-success fw-bold">ACCEPTED</td>
               {% endif %}
-            </td>
-          </tr>
+              <td><button type="submit" class="btn btn-primary btn-sm col-sm-25">View CV</button></td>
+              {% if item.highlight == 'star' %}
+                <td class="text-warning"><i class="bi bi-star bi-lg"></i></td>
+              {% else %}
+                <td><i class="bi bi-star-fill bi-lg"></i></td>
+              {% endif %}
+            </tr>
           {% endfor %}
         </tbody>
       </table>
     </div>
   </div>
 </div>
-{% endblock main-content %}
-
-
 -->
 
 
 
 
-
+<!-- This code is for the future, related to Hightlight applicants-->
 <!--
  <td><i class="bi bi-check-circle"></i></td>
 <td><i class="bi bi-star bi-lg"></i></td> -->
