--- a/app/templates/app/user/register_company.html
+++ b/app/templates/app/user/register_company.html
@@ -158,11 +158,12 @@
                             </div>
 
                             <div class="form-check d-flex justify-content-center mb-5">
-                              <input class="form-check-input me-2" type="checkbox" value="True" id="form2Example3c" name="checkbox"/>
-                              <label class="form-check-label" for="form2Example3">
-                                I agree all statements in <a href="#!">Terms of Service</a>
+                              <input class="form-check-input" style="border-width: 3px; border-color: black; margin-right: 5px;" type="checkbox" value="True" id="form2Example3c" name="checkbox">
+                              <label class="form-check-label" for="form2Example3c">
+                                  <span class="checkbox-custom"></span>
+                                  I agree to all statements in <a href="#!">Terms of Service</a>
                               </label>
-                            </div>
+                          </div>
           
                             <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                               <button type="submit" class="btn btn-primary btn-lg">Register</button>
