Add alert message UI

--- a/app/templates/app/post/apply.html
+++ b/app/templates/app/post/apply.html
@@ -20,7 +20,7 @@
                 <h2>CV FORM</h2>
             </div>
 
-            <div class="text-left fw-bold">
+            <div class="alert alert-danger">
               {% if messages %}
                   {% for message in messages %}
                       <div>{{ message }}</div>
