--- a/app/templates/app/post/publish.html
+++ b/app/templates/app/post/publish.html
@@ -30,7 +30,7 @@
                         <div class="card-body p-md-5">
                             <div class="row justify-content-center">
                                
-                                    <div class="text-center fw-bold">
+                                    <div class="alert alert-success">
                                         {% if messages %}
                                             {% for message in messages %}
                                                 <div>{{ message }}</div>
