Password cannot be blank and Remove report comment

--- a/app/templates/app/post/post.html
+++ b/app/templates/app/post/post.html
@@ -324,7 +324,7 @@
                                 {{ comment.dislikes.count }}
                             </button>
                         </form>
-                        <button type="submit" name="action" value="comment" class="btn btn-danger btn-sm" style="margin-left: 50px;">Report comment</button>
+                        {% comment %} <button type="submit" name="action" value="comment" class="btn btn-danger btn-sm" style="margin-left: 50px;">Report comment</button> {% endcomment %}
             </div>
         </div>
     </div>
