Edit alert messages

--- a/app/templates/app/post/apply.html
+++ b/app/templates/app/post/apply.html
@@ -20,10 +20,10 @@
                 <h2>CV FORM</h2>
             </div>
 
-            <div class="alert alert-danger">
+            <div class="text-center fw-bold">
               {% if messages %}
                   {% for message in messages %}
-                      <div>{{ message }}</div>
+                      <div class="alert alert-success">{{ message }}</div>
                   {% endfor %}
               {% endif %}
             </div>
