--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -94,10 +94,10 @@
                 </form>
               </div>
               
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <ul class="navbar-nav mx-5 pe-4 me-5 mb-2 mb-lg-0">
                 <!--Thanh profile-->
                 {% if user.username %}
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown" style="width:150px">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     {{user.username}}
                   </a>
