--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -99,7 +99,7 @@
         </div>
         
         
-        <div class="row justify-content-center mt-5">
+        <div class="justify-content-center mt-5">
         <nav aria-label="Page navigation example">
             <ul class="pagination justify-content-center">
             {% if posts.has_previous %} 
