--- a/app/templates/app/post/dashboard.html
+++ b/app/templates/app/post/dashboard.html
@@ -4,7 +4,7 @@
 
 
 {% block main-content %}
-<div class="row d-flex justify-content-center align-items-center h-100">
+<div class="d-flex justify-content-center align-items-center h-100">
   <div class="col-lg-7 col-xl-7">
 <div class="table-responsive small">
     <table class="table table-striped table-sm text-center">
