--- a/app/templates/app/post/history.html
+++ b/app/templates/app/post/history.html
@@ -9,7 +9,7 @@
         <h2>MY HISTORY</h2>
     </div>
 
-    <div class="row d-flex justify-content-center align-items-center">
+    <div class="d-flex justify-content-center align-items-center">
         <div class="col-lg-8 col-xl-8">
             <div class="table-responsive small">    
                 <table class="table table-striped table-sm">
