--- a/app/templates/app/post/dashboard.html
+++ b/app/templates/app/post/dashboard.html
@@ -5,7 +5,7 @@
 
 {% block main-content %}
 <div class="d-flex justify-content-center align-items-center h-100">
-  <div class="col-lg-7 col-xl-7">
+  <div class="col-lg-6 col-xl-6">
 <div class="table-responsive small">
     <table class="table table-striped table-sm text-center">
       {% if dashboard %}
@@ -14,7 +14,7 @@
             <th scope="col" class="col-sm-1">Order number</th>
             <th scope="col">Caption</th>
             <th scope="col">Name</th>
-            <th scope="col">Applied time</th>
+            <th scope="col" class="col-sm-2">Applied time</th>
             <th scope="col" class="col-sm-1">Status</th>
             <th scope="col" class="col-sm-1"></th>
             <th scope="col" class="col-sm-1"> Hightlight </th>
@@ -28,10 +28,14 @@
             <td>{{ application.caption }}</td>
             <td>{{ application.user_name }}</td>
             <td>{{ application.applied_time }}</td>
-            <td class="{% if application.status == 'PENDING' %}text-center fw-bold{% elif application.status == 'ACCEPTED' %}table-success text-center text-success fw-bold{% else %}table-danger text-center text-danger fw-bold{% endif %}">
+            <td class="{% if application.status == 'PENDING' %}text-center fw-bold table-secondary{% elif application.status == 'ACCEPTED' %}table-success text-center text-success fw-bold table-success{% else %}table-danger text-center text-danger fw-bold table-danger{% endif %}">
               {{ application.status }}
             <td><a href="{% url 'view_cv' %}" class="btn btn-primary btn-sm col-sm-25">View CV</a></td>
+            <!-- If highlight == True -->
             <td><i class="bi bi-star bi-lg"></i></td>
+            <!-- If highlight == False 
+            <td class="text-warning"><i class="bi bi-star-fill bi-lg"></i></td>
+            -->
             
           </tr>
           {% endfor %}
@@ -46,53 +50,6 @@
         
 {% endblock main-content %}
 
-
-<!-- A prototype for looping the code --> 
-
-<!--
-<div class="row d-flex justify-content-center align-items-center h-100">
-  <div class="col-lg-7 col-xl-7">
-    <div class="table-responsive small">
-      <table class="table table-striped table-sm text-center">
-        <thead>
-          <tr>
-            <th scope="col" class="col-sm-1">Order number</th>
-            <th scope="col">Caption</th>
-            <th scope="col">Name</th>
-            <th scope="col">Applied time</th>
-            <th scope="col" class="col-sm-1">Status</th>
-            <th scope="col" class="col-sm-1"></th>
-            <th scope="col" class="col-sm-1">Highlight</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for item in data %}
-            <tr>
-              <td>{{ item.order_number }}</td>
-              <td>{{ item.caption }}</td>
-              <td>{{ item.name }}</td>
-              <td>{{ item.applied_time }}</td>
-              {% if item.status == 'PENDING' %}
-                <td class="table-secondary fw-bold col-sm-1">PENDING</td>
-              {% elif item.status == 'DENIED' %}
-                <td class="table-danger text-danger fw-bold">DENIED</td>
-              {% elif item.status == 'ACCEPTED' %}
-                <td class="table-success text-success fw-bold">ACCEPTED</td>
-              {% endif %}
-              <td><a href="{% url 'view_cv' %}" class="btn btn-primary btn-sm col-sm-25">View CV</a></td>
-              {% if item.highlight == 'star' %}         
-                <td class="text-warning"><i class="bi bi-star bi-lg"></i></td>
-              {% else %}
-                <td><i class="bi bi-star-fill bi-lg"></i></td>
-              {% endif %}
-            </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
--->
 
 
 
