--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -14,6 +14,20 @@
   </div>
 </div>
 {% endif %}
+{% if messages %}
+<div class="container mt-3">
+  <div class="row">
+    <div class="col-md-12">
+      {% for message in messages %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+          {{ message }}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
+</div>
+{% endif %}
 <!DOCTYPE html>
 
 <html>
