--- a/app/templates/app/post/apply.html
+++ b/app/templates/app/post/apply.html
@@ -115,7 +115,7 @@
                     <h4 class="mb-3">Contact</h4>
                     <div class="row g-3">
                       <div class="col-sm-4">
-                        <label for="email" class="form-label">Email <span class="text-body-secondary">(Optional)</span></label>
+                        <label for="email" class="form-label">Email <span class="text-body-secondary"></span></label>
                         {% comment %} <input type="email" class="form-control" id="email" placeholder="you@example.com"> {% endcomment %}
                         {{ form.mail }}
                         <div class="invalid-feedback">
