--- a/app/templates/app/post/dashboard.html
+++ b/app/templates/app/post/dashboard.html
@@ -9,6 +9,13 @@
 <div class="table-responsive small">
     <table class="table table-striped table-sm text-center">
       {% if dashboard %}
+      <div class="container">
+        <div class="row justify-content-center mt-5 mb-4 border-bottom">
+            <div class="col-md-10 col-sm-12 text-center">
+                <h1 class="display-10">DASHBOARD</h1>
+            </div>
+        </div>
+      </div>
         <thead>
           <tr>
             <th scope="col" class="col-sm-1">Order number</th>
@@ -28,7 +35,7 @@
             <td>{{ application.caption }}</td>
             <td>{{ application.user_name }}</td>
             <td>{{ application.applied_time }}</td>
-            <td class="{% if application.status == 'PENDING' %}text-center fw-bold table-secondary{% elif application.status == 'ACCEPTED' %}table-success text-center text-success fw-bold table-success{% else %}table-danger text-center text-danger fw-bold table-danger{% endif %}">
+            <td class="{% if application.status == 'PENDING' %}text-center fw-bold table-secondary{% elif application.status == 'ACCEPTED' %} text-center text-success fw-bold table-success{% else %} text-center text-danger fw-bold table-danger{% endif %}">
               {{ application.status_E }}
             <td><a href="{% url 'view_cv' application.id %}" class="btn btn-primary btn-sm col-sm-25">View CV</a></td>
             <!-- If highlight == True -->
@@ -50,11 +57,3 @@
         
 {% endblock main-content %}
 
-
-
-
-
-<!-- This code is for the future, related to Hightlight applicants-->
-<!--
- <td><i class="bi bi-check-circle"></i></td>
-<td><i class="bi bi-star bi-lg"></i></td> -->
