--- a/app/templates/app/post/view_cv.html
+++ b/app/templates/app/post/view_cv.html
@@ -19,8 +19,18 @@
                 <img class="d-block mx-auto mb-4" src="{% static 'app/image/apply_icon.png' %}" alt="" width="200" height="200">
                 <h2>CV FORM</h2>
             </div>
+            
 
-            <div class="text-left fw-bold">
+
+            <div class="container h-100">
+                <div class="row d-flex justify-content-center align-items-center h-100">
+                    <div class="col-lg-12 col-xl-11">
+                        <div class="card text-black" style="border-radius: 25px;">
+                            <div class="card-body p-md-5">
+                                <div class="row justify-content-left">
+                                    <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
+                                        <div class="text-left fw-bold">
+            
               {% if messages %}
                   {% for message in messages %}
                       <div>{{ message }}</div>
@@ -28,102 +38,136 @@
               {% endif %}
             </div>
 
-            <div class="row g-5">
-                <h4 class="mb-0">Basic</h4>
-                <form class="needs-validation" novalidate="">
-                    <div class="row g-3">
-                        <div class="col-sm-5">
-                            <label for="firstName" class="form-label">Full name :</label>
-                            {% comment %} <input type="text" class="form-control" value="John Doe" readonly> {% endcomment %}
-                            {{ cv.full_name }}
-                        </div>
             
-                        <div class="col-sm-3">
-                            <label for="lastName" class="form-label">Gender :</label>
-                            {% comment %} <input type="text" class="form-control" value="Male" readonly> {% endcomment %}
-                            {{ cv.gender }}
-                        </div>
             
-                        <div class="col-sm-9">
-                            <label for="address" class="form-label">Address :</label>
-                            {% comment %} <input type="text" class="form-control" value="123 Main Street, City, Country" readonly> {% endcomment %}
-                            {{ cv.address }}
-                        </div>
-            
-                        <div class="col-sm-3">
-                            <label for="lastName" class="form-label">DOB :</label>
-                            {% comment %} <input type="text" class="form-control" value="1990-01-01" readonly> {% endcomment %}
-                            {{ cv.date_of_birth }}
-                        </div>
-            
-                        <div class="col-sm-6 d-flex flex-row align-items-center">
-                            <div class="form-outline flex-fill mb-0">
-                                <label for="">Experience</label>
-                                {% comment %} <textarea class="form-control" readonly>Briefly write about your experience</textarea> {% endcomment %}
-                                {{ cv.experience }}
-                            </div>
-                        </div>
-            
-                        <div class="col-sm-6 d-flex flex-row align-items-center">
-                            <div class="form-outline flex-fill mb-0">
-                                <label for="">Short introduction</label>
-                                {% comment %} <textarea class="form-control" readonly>Briefly introduce yourself</textarea> {% endcomment %}
-                                {{ cv.introduction }}
-                            </div>
-                        </div>
-            
-                        <div class="col-sm-6 d-flex flex-row align-items-center">
-                            <div class="form-outline flex-fill mb-0">
-                                <label for="">Education</label>
-                                {% comment %} <textarea class="form-control" readonly>Briefly write about your education</textarea> {% endcomment %}
-                                {{ cv.education }}
-                            </div>
-                        </div>
-            
-                        <div class="col-sm-6 d-flex flex-row align-items-center">
-                            <div class="form-outline flex-fill mb-0">
-                                <label for="">Interests</label>
-                                {% comment %} <textarea class="form-control" readonly>Briefly write about your interests</textarea> {% endcomment %}
-                                {{ cv.interest }}
-                            </div>
-                        </div>
-            
-                        <div class="col-sm-6 d-flex flex-row align-items-center">
-                            <div class="form-outline flex-fill mb-0">
-                                <label for="">Foreign Languages</label>
-                                {% comment %} <textarea class="form-control" readonly>Briefly write about your foreign languages</textarea> {% endcomment %}
-                                {{ cv.languages }}
-                            </div>
-                        </div>
-            
-                        <div class="col-sm-6 d-flex flex-row align-items-center">
-                            <div class="form-outline flex-fill mb-0">
-                                <label for="">Skills and Certification</label>
-                                {% comment %} <textarea class="form-control" readonly>Briefly write about your skills and certifications</textarea> {% endcomment %}
-                                {{ cv.skill }}
-                            </div>
-                        </div>
-                    </div>
-            
-                    <hr class="my-4">
-            
-                    <h4 class="mb-3">Contact</h4>
-                    <div class="row g-3">
-                        <div class="col-sm-4">
-                            <label for="email" class="form-label">Email <span class="text-body-secondary">(Optional)</span></label>
-                            {% comment %} <input type="email" class="form-control" value="you@example.com" readonly> {% endcomment %}
-                            {{ cv.mail }}
-                        </div>
-            
-                        <div class="col-sm-3">
-                            <label for="number" class="form-label">Phone number <span class="text-body-secondary">(Optional)</span></label>
-                            {% comment %} <input type="number" class="form-control" value="0123456789" readonly> {% endcomment %}
-                            {{ cv.phone }}
-                        </div>
-                    </div>
-                </form>
-            </div>
+           
 
+            <div class="d-flex flex-row align-items-center mb-2 details_of_entry">
+                <div class="w-50">
+                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <label for="firstName" class="form-label">Full name :</label>
+                </div>
+                <div class="w-50">
+                    <p class="form-control border-0" readonly>{{ cv.full_name }}</p>
+                </div>
+            </div>
+            
+            <div class="d-flex flex-row align-items-center mb-2 details_of_entry">
+                <div class="w-50">
+                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <label for="lastName" class="form-label">Gender :</label>
+                </div>
+                <div class="w-50">
+                    <p class="form-control border-0" readonly>{{ cv.gender }}</p>
+                </div>
+            </div>
+            
+            <div class="d-flex flex-row align-items-center mb-2 details_of_entry">
+                <div class="w-50">
+                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <label for="address" class="form-label">Address :</label>
+                </div>
+                <div class="w-50">
+                    <p class="form-control border-0" readonly>{{ cv.address }}</p>
+                </div>
+            </div>
+            
+            <div class="d-flex flex-row align-items-center mb-2 details_of_entry">
+                <div class="w-50">
+                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <label for="lastName" class="form-label">DOB :</label>
+                </div>
+                <div class="w-50">
+                    <p class="form-control border-0" readonly>{{ cv.date_of_birth }}</p>
+                </div>
+            </div>
+            
+            <div class="d-flex flex-row align-items-center mb-2 details_of_entry">
+                <div class="w-50">
+                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <label for="" class="form-label">Experience :</label>
+                </div>
+                <div class="w-50">
+                    <p class="form-control border-0" readonly>{{ cv.experience }}</p>
+                </div>
+            </div>
+            
+            <div class="d-flex flex-row align-items-center mb-2 details_of_entry">
+                <div class="w-50">
+                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <label for="" class="form-label">Short introduction :</label>
+                </div>
+                <div class="w-50">
+                    <p class="form-control border-0" readonly>{{ cv.introduction }}</p>
+                </div>
+            </div>
+            
+            <div class="d-flex flex-row align-items-center mb-2 details_of_entry">
+                <div class="w-50">
+                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <label for="" class="form-label">Education :</label>
+                </div>
+                <div class="w-50">
+                    <p class="form-control border-0" readonly>{{ cv.education }}</p>
+                </div>
+            </div>
+            
+            <div class="d-flex flex-row align-items-center mb-2 details_of_entry">
+                <div class="w-50">
+                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <label for="" class="form-label">Interests :</label>
+                </div>
+                <div class="w-50">
+                    <p class="form-control border-0" readonly>{{ cv.interest }}</p>
+                </div>
+            </div>
+            
+            <div class="d-flex flex-row align-items-center mb-2 details_of_entry">
+                <div class="w-50">
+                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <label for="" class="form-label">Foreign Languages :</label>
+                </div>
+                <div class="w-50">
+                    <p class="form-control border-0" readonly>{{ cv.languages }}</p>
+                </div>
+            </div>
+            
+            <div class="d-flex flex-row align-items-center mb-2 details_of_entry">
+                <div class="w-50">
+                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <label for="" class="form-label">Skills and Certification :</label>
+                </div>
+                <div class="w-50">
+                    <p class="form-control border-0" readonly>{{ cv.skill }}</p>
+                </div>
+            </div>
+            
+            <div class="d-flex flex-row align-items-center mb-2 details_of_entry">
+                <div class="w-50">
+                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <label for="email">Email :</label>
+                </div>
+                <div class="w-50">
+                    <p class="form-control border-0" readonly>{{ cv.mail }}</p>
+                </div>
+            </div>
+            
+            <div class="d-flex flex-row align-items-center mb-2 details_of_entry">
+                <div class="w-50">
+                    <i class="fas fa-user fa-lg me-3 fa-fw"></i>
+                    <label for="number" class="form-label">Phone number :</label>
+                </div>
+                <div class="w-50">
+                    <p class="form-control border-0" readonly>{{ cv.phone }}</p>
+                </div>
+            </div>
+            </div>
+            </div>
+            </div>
+            </div>
+            </div>
+            
+            
                     <hr class="my-4">
                     <div class="d-grid gap-2 d-md-flex col-6 mx-auto">
                       <a type="button" class="btn btn-danger btn-lg col-sm-6" href="{% url 'dashboard' %}">DENY</a>
@@ -135,6 +179,7 @@
             </div>
         </main>
     </div>
+
     
     <script src="" async defer></script>
   </body>
