--- a/app/templates/app/post/dashboard.html
+++ b/app/templates/app/post/dashboard.html
@@ -13,6 +13,7 @@
         <div class="row justify-content-center mt-5 mb-4 border-bottom">
             <div class="col-md-10 col-sm-12 text-center">
                 <h1 class="display-10">DASHBOARD</h1>
+                {{hl}}
             </div>
         </div>
       </div>
@@ -38,11 +39,17 @@
             <td class="{% if application.status == 'PENDING' %}text-center fw-bold table-secondary{% elif application.status == 'ACCEPTED' %} text-center text-success fw-bold table-success{% else %} text-center text-danger fw-bold table-danger{% endif %}">
               {{ application.status_E }}
             <td><a href="{% url 'view_cv' application.id %}" class="btn btn-primary btn-sm col-sm-25">View CV</a></td>
-            <!-- If highlight == True -->
-            <td><i class="bi bi-star bi-lg"></i></td>
-            <!-- If highlight == False 
-            <td class="text-warning"><i class="bi bi-star-fill bi-lg"></i></td>
-            -->
+
+            <form method="POST" action="">
+              {% csrf_token %}
+
+              {% if application.highlight %}
+              <td><button type="submit" name="hl" value=application.id class ="btn btn-primary btn-lg mx-2"><i class="bi bi-star-fill bi-lg"></i></button></td>
+              {% else %}
+              <td><button type="submit" name="hl" value=application.id class ="btn btn-secondary btn-lg mx-2"><i class="bi bi-star-fill bi-lg"></i></button></td>
+              {% endif %}
+
+          </form>
             
           </tr>
           {% endfor %}
